<resources>
    <string name="app_name">Gasto de viagem</string>
    <string name="calcular">Calcular</string>
    <string name="preco_default">R$ 0</string>
    <string name="seu_gasto_total_ser_de">Seu gasto total será de:</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="autonomia">Autonomia</string>
    <string name="preco_por_litro">Preco por litro</string>
    <string name="preco">Preco</string>
    <string name="total_de_quil_metros">Total de quilômetros</string>
    <string name="distancia">Distância</string>
</resources>